style: add day-hero-img dark mode support

--- a/day10.html
+++ b/day10.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+    <!-- 頂部景點大圖 -->
+    <div class="day-hero-img">
+        <img src="images/day10.png" alt="Day 10 Hero Image" onerror="this.parentElement.style.display='none';" />
+    </div>
+
     <!-- 日橫幅 -->
     <div class="banner" style="background:linear-gradient(135deg, #64748b, #64748bdd)">
         <div class="banner-num">10</div>
