--- a/day11.html
+++ b/day11.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+    <!-- 頂部景點大圖 -->
+    <div class="day-hero-img">
+        <img src="images/day11.png" alt="Day 11 Hero Image" onerror="this.parentElement.style.display='none';" />
+    </div>
+
     <!-- 日橫幅 -->
     <div class="banner" style="background:linear-gradient(135deg, #8b5cf6, #8b5cf6dd)">
         <div class="banner-num">11</div>
