--- a/day14.html
+++ b/day14.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+    <!-- 頂部景點大圖 -->
+    <div class="day-hero-img">
+        <img src="images/day14.png" alt="Day 14 Hero Image" onerror="this.parentElement.style.display='none';" />
+    </div>
+
     <!-- 日橫幅 -->
     <div class="banner" style="background:linear-gradient(135deg, #ec4899, #ec4899dd)">
         <div class="banner-num">14</div>
