--- a/day7.html
+++ b/day7.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+    <!-- 頂部景點大圖 -->
+    <div class="day-hero-img">
+        <img src="images/day7.png" alt="Day 7 Hero Image" onerror="this.parentElement.style.display='none';" />
+    </div>
+
     <!-- 日橫幅 -->
     <div class="banner" style="background:linear-gradient(135deg, #3b82f6, #3b82f6dd)">
         <div class="banner-num">07</div>
