--- a/day9.html
+++ b/day9.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+    <!-- 頂部景點大圖 -->
+    <div class="day-hero-img">
+        <img src="images/day9.png" alt="Day 9 Hero Image" onerror="this.parentElement.style.display='none';" />
+    </div>
+
     <!-- 日橫幅 -->
     <div class="banner" style="background:linear-gradient(135deg, #14b8a6, #14b8a6dd)">
         <div class="banner-num">09</div>
