--- a/day12.html
+++ b/day12.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+    <!-- 頂部景點大圖 -->
+    <div class="day-hero-img">
+        <img src="images/day12.png" alt="Day 12 Hero Image" onerror="this.parentElement.style.display='none';" />
+    </div>
+
     <!-- 日橫幅 -->
     <div class="banner" style="background:linear-gradient(135deg, #2563eb, #2563ebdd)">
         <div class="banner-num">12</div>
